@@ -1,3 +1,11 @@
+Fri Apr  4 15:33:08 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * tao/DynamicAny/DynAny_i.cpp:
+          Type LongDouble was not being compared with the equality test.
+
+        * tests/DynAny_Test/test_dynany.cpp:
+          Enhanced to show the LongDouble equality test fix.
+
 Fri Apr  4 08:40:43 UTC 2014  Martin Corino  <mcorino@remedy.nl>
 
         * bin/tao_orb_tests.lst:
